# apis_and_scrapers

./: .gitignore  Pipfile  README.md  article.md  beautiful_soup_demo.ipynb  bs_instagram_example.ipynb  instagram_scraper.ipynb  medium_scraper.ipynb  pyproject.toml  wikipedia_scraper.ipynb
adultswim/: adultswim_builder.py  adultswim_scraper.ipynb
instagram/: insta_builder.py  instagram_scraper.ipynb
javascript/tmdb_api/: README.md
medium/: medium_scraper.ipynb
modules/: insta_builder.py
notebooks/: craigslist_scraper.ipynb  instagram_scraper.ipynb  pypi_scraper.ipynb  youtube_api.ipynb
profile_builder/: profile_builder.py
python/modules/: adultswim_builder.py  insta_builder.py
python/notebooks/: adultswim_scraper.ipynb  instagram_scraper.ipynb  test.py  youtube_api.ipynb
scroller/: scroller.ipynb  scroller.py
the_movie_database/: package-lock.json  package.json  server.js
tiktok/: scrape.py  tiktok_scraper.ipynb
utilities/: README.md
