[tool.poetry]
name = "web_scrapers"
version = "0.1.0"
description = ""
authors = ["Skyler Burger <skylerburger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.1"
jupyterlab = "^2.2.10"
google-api-python-client = "^1.9.3"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
